# drumgizmo-kits-generator

./: .cascade-config  .cascade-config.md  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  audio.py  config.py  constants.py  create_drumgizmo_kit.py  main.py  pyproject.toml  requirements-dev.txt  sonar-project.properties  utils.py  xml_generator.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: precommit.yml  pylint.yml  pytest.yml  quality.yml  release.yml  sonar.yml  validate.yml
drumgizmo_kits_generator/: __init__.py  audio.py  cli.py  config.py  constants.py  exceptions.py  kit_generator.py  logger.py  main.py  state.py  transformers.py  utils.py  validators.py  xml_generator.py
examples/: drumgizmo-kit-example.ini  drumgizmo-kit.sample.ini  generate-target-output.txt  target-generation-output-dry-run.txt  target-generation-output.txt
examples/sources/: drumgizmo-kit.ini  gs-16b-1c-48000hz.flac
models/: generate-target-output.txt
scripts/: generate_test_kit.py  generate_test_kit_and_compare.py
tests/: __init__.py  conftest.py  test-empty-main-channels.ini  test_audio.py  test_audio_additional.py  test_audio_convert_sample_rate.py  test_audio_error_handling.py  test_base.py  test_cli.py  test_command_line_args.py  test_config.py  test_config_additional.py  test_constants.py  test_exceptions.py  test_exceptions_integration.py  test_integration.py  test_integration_errors.py  test_integration_velocity_levels.py  test_kit_generator.py  test_kit_generator_additional.py  test_kit_generator_copy_additional_files.py  test_kit_generator_error_handling.py  test_kit_generator_generate_xml_files.py  test_kit_generator_prepare_directories.py  test_kit_generator_process_audio_files.py  test_kit_generator_scan_audio_sources.py  test_kit_generator_validate_directories.py  test_logger.py  test_main.py  test_metadata.py  test_mock_configs.py  test_power_calculation.py  test_state.py  test_transformers.py  test_utils.py  test_utils_additional.py  test_utils_check_dependency.py  test_utils_handle_subprocess_error.py  test_utils_temp_directory.py  test_validation_rules.py  (+3 more)
tests/mocks/: channels-can-be-numbers.ini  channels-can-have-spaces.ini  channels-can-not-be-empty.ini  extensions-can-not-be-empty.ini  extra-files-must-exist.ini  full-config.ini  generate-target-test-output.txt  logo-must-exist.ini  main-channels-must-exist-in-channels.ini  midi-note-max-can-not-be-less-than-1.ini  midi-note-max-can-not-be-less-than-median.ini  midi-note-max-can-not-be-up-to-127.ini  midi-note-median-can-not-be-less-than-1.ini  midi-note-median-can-not-be-up-to-127.ini  midi-note-min-can-not-be-less-than-1.ini  midi-note-min-can-not-be-up-to-127.ini  midi-note-min-can-not-be-up-to-max.ini  midi-note-min-can-not-be-up-to-median.ini  name-can-not-be-empty.ini  samplerate-must-be-up-to-0.ini  sampterate-can-not-be-empty.ini  velocity-levels-can-not-be-less-than-1.ini
tests/sources/: drumgizmo-kit.ini
tests/target-4-levels/: drumkit.xml  midimap.xml
tests/target-4-levels/Bass-Drum-1/: Bass-Drum-1.xml
tests/target-4-levels/Example/: Example.xml
tests/target-4-levels/gs-16b-1c-44100hz/samples/: 2-gs-16b-1c-44100hz.flac  3-gs-16b-1c-44100hz.flac
