[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drumgizmo-kits-generator"
version = "1.6.0"
description = "Tool to generate DrumGizmo kits from audio samples with multiple velocity levels"
readme = "README.md"
authors = [
    {name = "Piero", email = "me@picas.fr"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "configparser>=5.0.0",
    "tomlkit>=0.11.0",
    "typing-extensions>=4.0.0; python_version < '3.10'",
]

[project.urls]
"Homepage" = "https://github.com/e-picas/drumgizmo-kits-generator"
"Bug Tracker" = "https://github.com/e-picas/drumgizmo-kits-generator/issues"

[project.scripts]
create_drumgizmo_kit = "drumgizmo_kits_generator.main:main"

[tool.setuptools]
packages = ["drumgizmo_kits_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["drumgizmo_kits_generator"]
omit = ["tests/*"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "coverage>=6.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "pylint>=2.12.0,<=3.0.3",
    "pre-commit>=3.10.0",
    "commitizen==3.18.0",
    "python-semantic-release>=9.21.0",
]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.semantic_release]
assets = []
build_command_env = []
commit_message = "chore(release): version {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version:nf"
]

[tool.semantic_release.branches.main]
match = "master"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = ["docs:*"]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = false

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = false
ignore_merge_commits = false

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
